test/Fail/Issue6687.err
Issue6687.agda:20.1-23.32: error: [TerminationIssue]
Termination checking failed for the following function:
  bad
Problematic call:
  bad n (vclos (suc n₁) (cons n₁ x x₁))
    (at Issue6687.agda:21.34-37)
